--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,34 @@
 * {
   box-sizing: border-box;
+  margin-left: 10px;
 }
 
 img {
-  max-width: 100px;
-  max-height: 100px;
+  width: 300px;
+  height: 250px;
+  border: 2px solid #213547;
+  border-radius: 2px;
+}
+
+.modal {
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.Gallery {
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+  gap: 16px;
+  flex-wrap: wrap;
+  position: relative;
 }
