--- a/src/App.css
+++ b/src/App.css
@@ -11,17 +11,22 @@ img {
 }
 
 .modal {
-  height: 100vh;
-  width: 100vw;
-  background-color: rgba(0, 0, 0, 0.7);
-  position: fixed;
-  top: 0;
-  left: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
   color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.modal img {
+  width: 600px;
+  height: 500px;
 }
 
 .Gallery {
